    could cause buffer-overflows.
  * bug fix: source location information is stored correctly 
    (broken since 1.0.6). This bug would generally show up as the
    Slime debugger higlighting the wrong form when the sldb-show-source
    command was used.
  * bug fix: Branch forms are again annotated as branches in the sb-cover
    annotations.

changes in sbcl-1.0.8 relative to sbcl-1.0.7:
  * enhancement: experimental macro SB-EXT:COMPARE-AND-SWAP provides
    atomic compare-and-swap operations on threaded platforms.
  * enhancement: experimental function SB-EXT:RESTRICT-COMPILER-POLICY
    allows assining a global minimum value to optimization qualities
    (overriding proclamations and declarations).
  * enhancement: closed over variables can be stack-allocated on x86
    and x86-64.
  * performance bug fix: GETHASH and (SETF GETHASH) are once again
    non-consing.
  * optimization: slot definition lookup is now O(1). This speeds up
    eg. SLOT-VALUE and (SETF SLOT-VALUE) with variable slot names.
  * optimization: STRING-TO-OCTETS is now up to 60% faster for UTF-8.
  * optimization: ASSOC and MEMBER can now be open-coded for all
    combinations of keyword arguments when second argument is constant
    and SPEED >= SPACE. In other cases a specialized version is
    selected.
  * bug fix: using obsoleted structure instances with TYPEP and
    generic functions now signals a sensible error.
  * bug fix: threads waiting on GET-FOREGROUND can be interrupted.
    (reported by Kristoffer Kvello)
  * bug fix: backtrace construction is now more careful when making
    lisp-objects from pointers on the stack, to avoid creating bogus
    objects that can be seen by the GC.
  * bug fix: defaulting of values in contexts expecting more than 7
    variables now works on x86-64.  (reported by Christopher Laux)
  * bug fix: modifications to packages (INTERN, EXPORT, etc) are now
    thread safe.
  * bug fix: (SETF SYMBOL-PLIST) no longer allows assigning a non-list