@@ -1442,7 +1442,9 @@ is a good idea, but see SB-SYS re. blurring of boundaries."
                "PARSE-DEFMACRO" "PARSE-UNKNOWN-TYPE"
                "PARSE-UNKNOWN-TYPE-SPECIFIER" "PATHNAME-DESIGNATOR"
                #!+(or x86 x86-64) "*PSEUDO-ATOMIC-BITS*"
-               "PUNT-PRINT-IF-TOO-LONG" "READER-IMPOSSIBLE-NUMBER-ERROR"
+               "PUNT-PRINT-IF-TOO-LONG"
+               "RAW-INSTANCE-SLOTS-EQUALP"
+               "READER-IMPOSSIBLE-NUMBER-ERROR"
                "READER-PACKAGE-ERROR" "READER-EOF-ERROR"
                "RESTART-DESIGNATOR"
                "RUN-PENDING-FINALIZERS"
